--- a/L1and2.rnw
+++ b/L1and2.rnw
@@ -1,9 +1,17 @@
-\documentclass{beamer}
-% ---A way to create handouts -----------------------------------------
-% \documentclass[handout]{beamer}
-% \usepackage{pgf,pgfpages}
-% \pgfpagesuselayout{4 on 1}[letterpaper,landscape,border shrink=0.5in]
-% --------------------------------------------------------------------
+<<PRES_OR_HANDOUTS, cache=FALSE, echo=FALSE, include=TRUE, results='asis'>>=
+if(!exists("HANDOUT")) HANDOUT <- FALSE
+if(HANDOUT){
+   cat("
+\\documentclass[handout]{beamer}
+\\usepackage{pgf,pgfpages}
+\\pgfpagesuselayout{4 on 1}[letterpaper,landscape,border shrink=0.5in]
+")
+} else {
+   cat("\\documentclass{beamer}")
+}
+rm(HANDOUT)
+@
+
 <<knitr, eval=FALSE>>=
 library(knitr)
 library(Hmisc)
