--- a/L9.rnw
+++ b/L9.rnw
@@ -189,232 +189,93 @@ interesting effect size.
 \end{itemize}
 }
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section[Significance]{Statistical Significance} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section[Power]{Examples} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \frame{ % -------------------------------------------------------------------->
-\frametitle{Statistical Significance}
-By default, we construct our statistical test to reject a true
-null hypothesis only 5\% of the time. This, the probability
-of 'error of type 1'
-is the significance level of the test.  \\
-(It is \emph{not} the probability of $H_0$ given by the data.\\
-It is 'almost' the probability of the data, given $H_0$.)
+% Idea: Breastfeeding example.
+<<>>=
+library(reshape2)
+library(ggplot2)
 
-\rymd Rejecting $H_0$ is generally a strong statement.
+load("data/F4_breastfeeding.Rdata")
+hist(x, breaks=seq(0,200,25))
+hist(y, breaks=seq(0,200,25))
+df <- model.frame(~x+y)
+df$id <- 1:dim(df)[1]
 
-\rymd It means that data is incompatible with $H_0$. \\
+mdf <- melt(df, id.vars = "id")
+ggplot(mdf, aes(value)) + geom_histogram(binwidth=15) + facet_wrap(~variable)
 
-\rymd Rejection should be weighted against the prior
-plausability of $H_0$.
-}
-\frame{ % -------------------------------------------------------------------->
-\begin{center}
-\includegraphics[scale=0.33]{pics/frequentists_vs_bayesians.png}
-\end{center}
-}
-\frame{ % -------------------------------------------------------------------->
-\frametitle{When writing or reading a paper}
-Even when the prior plausibility is ok, a statistically
-significant result is by itself not very informative.
+df$diff <- with(df, y-x)
+hist(df$diff)
 
-\rymd Some 'easy' problems:
-\begin{itemize}
-\item If sample size is large, the effect might be uninterestingly small. \\
-Solution: report effect size.
-\item The assumptions of the analysis might not be fullfilled. \\
-Solution: one should check the assumptions. \\
-(Violations should make the test more conservative.)
-\end{itemize}
+N  <- length(x)
 
-\rymd Some 'hard' problems:
-\begin{itemize}
-\item Researcher degrees of freedom.
-\item Publication bias (File drawer effect).
-\end{itemize}
-}
-<<rdf, eval=FALSE>>=
-RR <- function(n, sd=1, N=1000L, alpha=0.05){
-   rej <- rep(NA,N)
-   for(i in 1:N){
-      if(i %% 50 == 0) cat(N-i, "...")
-      if(i==N) cat("\n")
-      y <- rnorm(n, 0, sd)
-      p <- rep(NA_real_,n-1)
-      for(k in 2:n) p[k-1] <- t.test(y[1:k])$p.value
-      rej[i] <- any(p<=0.05)
+
+load("data/F4_breastfeeding.Rdata")
+diffy <- y - x
+
+p_boot <- function(m, bi=50){
+   # m = sample size, bi = bootstrap iterations, mi = meta iterations
+   P <- rep(NA_real_, bi)
+   for(indx in 1:bi){
+      boot_sample <- sample(x = diffy, size = m, replace = T)
+      P[indx] <- wilcox.test(boot_sample, exact = FALSE)$p.value
    }
-   mean(rej)/alpha
+   P
 }
-sd <- 1
-mean_for_pow <- 1
-pow <- 0.95
-ns <- 1:500
-# n <- which(
-#    1-pnorm(1.96*sd/ns, mean=mean_for_pow)+pnorm(-1.96*sd/ns, mean=mean_for_pow)
-#    >= pow )[1]
-n <- 50
-R <- RR(n, sd)
+x11(); hist(p_boot(14))
 
-flott <- function(){
-   y <- rnorm(n, 0, sd)
-   p <- rep(NA_real_,n)
-   for(k in 2:n) p[k] <- t.test(y[1:k])$p.value
-   par(mar=c(4,4,0,2))
-   plot(y, xlab="Measurement number", ylab="Measurements"#,main=paste("Relative risk of rejection:",round(R, 1))
-   )
-   points(cumsum(y)/(1:n), type='l', col="grey60")
-   y0 <- min(y)
-   y1 <- max(y)
-   r <- y1-y0
-   axis(side=4, at=seq(y0,y1,len=5), labels=seq(0,1,len=5), col="red")
-   points(y=y0+r*p, x=1:n, col="red", type='l')
-   points(y=y0+r*p[n], x=n, col="red", pch=20, cex=1.5)
-   abline(h=0, lty=3)
-   abline(h=c(y0,y0+r*0.05,y1), lty=3, col="red")
-} # ---------------------
-#axis(side=4, at=y0+r*0.05, label=0.05, las=1, col="red")
-flott()
-# pows <- seq(0.6, 0.95, by=0.05)
-# sds <- c(0.5,1,2,5,10)
-# MAT <- matrix(NA_real_,nrow=length(sds), ncol=length(pows))
-# rownames(MAT) <- sds
-# colnames(MAT) <- pows
-# for(i in 1:length(pows)){
-#    cat("~~~~~~~~~~~~ i ~~~~~~~~~~~~~~~~~~ :  ", i,  "~~~~~~~~~~~~~~~~~~ \n")
-#    for(j in 1:length(sds)){
-#       cat("---- j ---- :  ", j, " ----  \n")
-#       n <- which(1-pnorm(1.96*sd/(1:100000), mean=mean_for_pow)
-#          + pnorm(-1.96*sd/(1:100000), mean=mean_for_pow) >=pows[i])[1]
-#       MAT[j,i] <- RR(n, sds[j], N=5000)
-#    }
-# }
-# save(MAT, file="RR_vs_pow.rdata")
-# load("RR_vs_pow.rdata")
-# par(mar=c(4,4,0,0))
-# barplot(MAT, beside=TRUE, legend=TRUE, args.legend=c(x="topleft",
-#    title="Noise relative effect size", bty='n'),
-#    ylab="Relative Risk of Rejecting a True Null Hypothesis",
-#    xlab="Power")
-@
-\frame{ % -------------------------------------------------------------------->
-\frametitle{Researcher degrees of freedom}
-Unless you have a predetermined analysis,
-there are many decisions that influence final estimates;
-\begin{itemize}
-   \item when to stop collecting data,
-   \item when to exclude datapoints,
-   \item which variables to control for,
-   \item which statistical analysis to do,
-   \item \ldots and more.
-\end{itemize}
-In theory (but not practice) we could take all this
-into account and calculate what this will do to the $p$-value.
-
-\rymd In general it will raise the $p$-value \emph{substantially}.
-
-\rymd Attempt at solution: be honest. Report the rule you made for collecting
-and handling data, which variables you measured, etc.
+pow_boot <- function(m, bi=50, mi=50, thresh=0.05, probs=c(0.05,0.5,.95)){
+   p_ge_thresh <- rep(NA_real_, mi)
+   for(indx in 1:mi){
+      p_tmp <- p_boot(m, bi)
+      p_ge_thresh[indx] <- sum(p_tmp<0.05)/bi
+   }
+   M <- quantile(p_ge_thresh, probs = probs)
+   names(M) <- paste0(100*probs, "%")
+   M
 }
-\frame{ % -------------------------------------------------------------------->
-\frametitle{Choosing when to stop invalidates the $p$-value.}
-Suppose a researcher has allocated funds for 50 measurements.
-Unbeknowst to her, there is no effect size - all measurements
-are just (standard Normal) 'noise'.
+pow_boot(14, 100, 100)
 
-\vspace{0.2cm} What if she has the opportunity to analyze her data sequentially,
-as it comes in? In particular, to test the null hypothesis: "no effect size"
-with error rate 5\%.
-
-\vspace{0.2cm} The $p$-value is only meaningful for a single analysis for a predetermined
-sample size.
-If she is allowed to stop at any point she chooses (after inspecting the date
-collected thus far) the 'real' error rate is in fact $\approx 30\%$.
-
-\vspace{0.2cm} The following graphs shows data (dots), mean value (grey) and
-$p$-values (red), sequentially.
+search <- function(m, bi=50, mi=50, thresh=0.05, probs=c(0.05,0.5,.95)){
+   m_n <- length(m)
+   M <- matrix(NA_real_, nrow=m_n, ncol=3)
+   colnames(M) <- paste0(100*probs, "%")
+   rownames(M) <- m
+   for(indx in 1:m_n){
+      cat("progress: ", indx, "of", m_n, "\n")
+      M[indx,] <- pow_boot(m[indx], bi, mi, thresh, probs)
+   }
+   as.data.frame(M)
 }
-\frame{ % -------------------------------------------------------------------->
-\begin{center}
-Something like this will happen 70\% of the time: \\
-\includegraphics[scale=\plot]{pics/potion.pdf}
-\end{center}
-}
-\frame{ % -------------------------------------------------------------------->
-\begin{center}
-Something like this will happen 30\% of the time:
-\includegraphics[scale=\plot]{pics/bingo2.pdf}
-\end{center}
-}
-\frame{ % -------------------------------------------------------------------->
-\frametitle{Publication bias}
-Positive (meaning statistically significant) results are more likely
-to be published.
-
-\rymd
-This effectively raises the (reported) $p$-values and effect sizes.
-
-\rymd
-Attempt at solution: When reading a single study, just be aware. \\
-To some extent this effect can be handled in a meta-analysis.
-
-\rymd
-A 'funnelplot' plots some measure of study quality (usually
-sample size) against reported effect size.
-}
-\frame{ % -------------------------------------------------------------------->
-\frametitle{Publication bias skewes results}
-<<funnel>>=
-eff <- 1
-Y <- c(5,4.1,4.0,seq(3.7,2.1,-0.3), seq(2,1,-0.1) )
-y <- Y; y[1] <- 2*Y[1]
-X <- rnorm(length(Y), eff, sd=2/y)
-# plot(X,Y,xlab="Reported Effect Size", ylab="Study Quality", yaxt='n', pch=19)
-# abline(v=weighted.mean(x=X,w=Y), lwd=2, lty=3, col="black")
-# legend("topright", "Effect", lwd=2, lty=2, col="black")
-# FILT <- X>0.5
-# COL <- ifelse(FILT, "green", "red")
-# plot(X, Y, xlab="Reported Effect Size", ylab="Study Quality", yaxt='n', pch=19,
-#    col=COL)
-# abline(v=weighted.mean(x=X[FILT],w=Y[FILT]), lwd=2, lty=3, col="green")
-# legend("topright", "Effect", lwd=2, lty=2, col="green")
-par(mar=c(4,3,1,1))
-FILT <- X>0.5
-COL <- ifelse(FILT, "green", "red")
-plot(X, Y, xlab="", ylab="", yaxt='n', pch=21, cex=1.3, lwd=2,
-   col="black", bg=COL)
-mtext(text="Study Quality Increase -->", side=2, line=1, cex=1.5)
-mtext(text="Reported Effect Size", side=1, line=3, cex=1.5)
-abline(v=weighted.mean(x=X[FILT],w=Y[FILT]), lwd=3, lty=3, col="green")
-abline(v=weighted.mean(x=X,w=Y), lwd=3, lty=3, col="black")
-legend("topright", c("Published", "Total"), title="Estimated Effect", lwd=2, lty=2,
-   col=c("green", "black"),  cex=1.3)
-legend("topleft", c("Yes", "No"), title="Published", pch=21, cex=1.3, lwd=2,
-   pt.bg=unique(COL), lty=0)
+(POW1 <- search(m=c(10,15,20,25,30,35,40,45), bi = 100, mi = 100))
+(POW2 <- search(m=c(10,15,20,25,30,35,40,45), bi = 250, mi = 100))
+(POW3 <- search(m=c(10,15,20,25,30,35,40,45), bi = 500, mi = 200))
+save(list=sprintf("POW%d",1:3), file="data/power_bm.rdat")
 @
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{ } %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\subsection{} % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\frame{ % -------------------------------------------------------------------->
+Idea: New drug versus Dabigatran.
 
-% \frame{ % -------------------------------------------------------------------->
-% \frametitle{Summary}
-%
-% }
+}
+
+\frame{ % -------------------------------------------------------------------->
+
+
+
+}
 
 \frame{ % -------------------------------------------------------------------->
 \frametitle{References}
 
 \begin{itemize}
    \item Chapters 23-25: Petrie \& Sabin. \emph{Medical Statistics at a Glance}, Wiley-Blackwell (2009).
-   \item Simmons et al. \emph{False-Positive Psychology: Undisclosed Flexibility in Data Collection and Analysis Allows Presenting Anything as Significant}, Psychological Sciences \textbf{22} 11 (2011) 1359-1366.
-   \item Dubben \& Beck-Bornholdt. \emph{Systematic Review of Publication Bias in Studies on Publication Bias}, BMJ \textbf{331} 7514 (2005) 433-434.
-   \item Ioannidis, \emph{Why Most Published Research Findings Are False}, PLoS medicine \textbf{2} 8 (2005) e124.
-   \item Munroe. \emph{Frequentist vs. Bayesians},
-Xkcd - a webcomic of romance, sarcasm, math, and language, 1132 (2012), http://www.xkcd.com/1132.
-\end{itemize}
+
 }
 % http://xkcd.org/1132/
 \end{document}
